# Open Freelance Accounting
# A double-entry accounting application for freelances.
#
# Copyright (C) 2014,2015,2016 Pierre Wieser (see AUTHORS)
#
# Open Freelance Accounting is free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# Open Freelance Accounting is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty
# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Open Freelance Accounting; see the file COPYING. If not,
# see <http://www.gnu.org/licenses/>.
#
# Authors:
#   Pierre Wieser <pwieser@trychlos.org>

include ../make.inc

my_include_HEADERS = \
	my.h												\
	my-accel-group.h									\
	my-char.h											\
	my-date.h											\
	my-date-combo.h										\
	my-date-editable.h									\
	my-date-renderer.h									\
	my-decimal-combo.h									\
	my-dnd-book.h										\
	my-dnd-window.h										\
	my-double.h											\
	my-double-editable.h								\
	my-double-renderer.h								\
	my-field-combo.h									\
	my-file-monitor.h									\
	my-iaction-map.h									\
	my-iassistant.h										\
	my-icollectionable.h								\
	my-icollector.h										\
	my-idialog.h										\
	my-idnd-detach.h									\
	my-iident.h											\
	my-igridlist.h										\
	my-iprogress.h										\
	my-isettings.h										\
	my-iwindow.h										\
	my-progress-bar.h									\
	my-settings.h										\
	my-tab.h											\
	my-thousand-combo.h									\
	my-timeout.h										\
	my-utils.h											\
	$(NULL)
